Updating project source code